test/corpus/errors2.txt
===
Implicit end tag from closing mustache context
===
<div>
  {{#img-bottom-src}}
    <article>
    <p>
  {{/img-bottom-src}}
</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name))
          (html_forced_end_tag))
        (html_forced_end_tag))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))
