test/corpus/main.txt
===================================
Tags
===================================
<span>Hello</span>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name))))

===================================
Tags with attributes
===================================
<input value=yes class="a" data-💩></input>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value))
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)))
      (html_attribute
        (html_attribute_name))))
  (html_erroneous_end_tag
    (html_erroneous_end_tag_name)))

===================================
Nested tags
===================================
<div>
  <span>a</span>
  b
  <b>c</b>
  Multi-line
  text
</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (text)
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (text)
    (html_end_tag
      (html_tag_name))))

==================================
Void tags
==================================
<form><img src="something.png"><br><input type=submit value=Ok /></form>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (html_attribute_value)))))
    (html_element
      (html_start_tag
        (html_tag_name)))
    (html_element
      (html_self_closing_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_attribute_value))
        (html_attribute
          (html_attribute_name)
          (html_attribute_value))))
    (html_end_tag
      (html_tag_name))))

==================================
Void tags at EOF
==================================
<img src="something.png">
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value))))))

==================================
Custom tags
==================================
<something:different>
  <atom-text-editor mini>
    Hello
  </atom-text-editor>
</something:different>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)))
      (text)
      (html_end_tag
        (html_tag_name)))
    (html_end_tag
      (html_tag_name))))

==================================
Comments
==================================
<!-- hello -->
<!-- world ->-> -- > ->->->-- -> still comment -->
<div>
  <!-- <span>something</span> -->
</div>
---

(document
  (html_comment)
  (html_comment)
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_comment)
    (html_end_tag
      (html_tag_name))))

==================================
Raw text elements
==================================
<script>
  </s
  </sc
  </scr
  </scri
  </scrip
</script>

<style>
  </ </s </st </sty </styl
</style>

<script>
</SCRIPT>

---

(document
  (html_script_element
    (html_start_tag
      (html_tag_name))
    (html_raw_text)
    (html_end_tag
      (html_tag_name)))
  (html_style_element
    (html_start_tag
      (html_tag_name))
    (html_raw_text)
    (html_end_tag
      (html_tag_name)))
  (html_script_element
    (html_start_tag
      (html_tag_name))
    (html_raw_text)
    (html_end_tag
      (html_tag_name))))

==================================
All-caps doctype
==================================
<!DOCTYPE html PUBLIC
  "-//W3C//DTD XHTML 1.0 Transitional//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
---

(document
  (html_doctype))

==================================
Lowercase doctype
==================================
<!doctype html>
---

(document
  (html_doctype))

==================================
LI elements without close tags
==================================
<ul>
  <li>One
  <li>Two
</ul>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_end_tag
      (html_tag_name))))

======================================
DT and DL elements without close tags
======================================
<dl>
  <dt>Coffee
  <dt>Café
  <dd>Black hot drink
  <dt>Milk
  <dd>White cold drink
</dl>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_end_tag
      (html_tag_name))))

======================================
P elements without close tags
======================================
<p>One
<div>Two</div>
<p>Three
<p>Four
<h1>Five</h1>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text))
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name)))
  (html_element
    (html_start_tag
      (html_tag_name))
    (text))
  (html_element
    (html_start_tag
      (html_tag_name))
    (text))
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name))))

======================================
Ruby annotation elements without close tags
======================================
<ruby>東<rb>京<rt>とう<rt>きょう</ruby>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text))
    (html_end_tag
      (html_tag_name))))

=======================================
COLGROUP elements without end tags
=======================================
<table>
  <colgroup>
    <col style="background-color: #0f0">
    <col span="2">
  <tr>
    <th>Lime</th>
    <th>Lemon</th>
    <th>Orange</th>
  </tr>
</table>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value))))))
    (html_element
      (html_start_tag
        (html_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)
        (html_end_tag
          (html_tag_name)))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)
        (html_end_tag
          (html_tag_name)))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)
        (html_end_tag
          (html_tag_name)))
      (html_end_tag
        (html_tag_name)))
    (html_end_tag
      (html_tag_name))))

=========================================
TR, TD, and TH elements without end tags
=========================================
<table>
  <tr>
    <th>One
    <th>Two
  <tr>
    <td>Three
    <td>Four
</table>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)))
    (html_element
      (html_start_tag
        (html_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text))
      (html_element
        (html_start_tag
          (html_tag_name))
        (text)))
    (html_end_tag
      (html_tag_name))))

==============================
Named entities in tag contents
==============================

<p>Lorem ipsum &nbsp; dolor sit &copy; amet.</p>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_entity)
    (text)
    (html_entity)
    (text)
    (html_end_tag
      (html_tag_name))))

================================
Numeric entities in tag contents
================================

<p>Lorem ipsum &#160; dolor sit &#8212; amet.</p>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_entity)
    (text)
    (html_entity)
    (text)
    (html_end_tag
      (html_tag_name))))

=================================
Multiple entities in tag contents
=================================

<p>Lorem ipsum &#xA0; dolor &#xa0; sit &nbsp; amet.</p>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_entity)
    (text)
    (html_entity)
    (text)
    (html_entity)
    (text)
    (html_end_tag
      (html_tag_name))))

============================
Bare ampersand in tag content
============================

<p>foo & bar</p>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (text)
    (text)
    (html_end_tag
      (html_tag_name))))

==================================
Omitted end tags for html and head
==================================

<!doctype html><html><head>

---

(document
  (html_doctype)
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name)))))
